# rpg_ultimate_slam_open

./: README.md  dependencies.yaml
applications/ze_ceres_backend/: CMakeLists.txt  package.xml
applications/ze_ceres_backend/doc/: marginalization.tex  refs.bib
applications/ze_ceres_backend/include/ze/nlls/: ceres_iteration_callback.hpp  error_interface.hpp  (+21 more)
applications/ze_ceres_backend/src/: estimator.cpp  homogeneous_point_error.cpp  homogeneous_point_local_parameterization.cpp  homogeneous_point_parameter_block.cpp  imu_error.cpp  local_parameterization_additional_interfaces.cpp  map.cpp  marginalization_error.cpp  pose_error.cpp  pose_local_parameterization.cpp  pose_parameter_block.cpp  relative_pose_error.cpp  speed_and_bias_error.cpp  speed_and_bias_parameter_block.cpp
applications/ze_vio_ceres/: CMakeLists.txt  package.xml
applications/ze_vio_ceres/cfg/: vio_base.conf  vio_davis.conf  vio_davis346.conf
applications/ze_vio_ceres/launch/: ijrr17.launch  ijrr17_events_only.launch  live_DAVIS240C.launch  live_DAVIS240C_events_only.launch
applications/ze_vio_ceres/src/: vio_ceres_backend_interface.cpp  vio_ceres_node.cpp
applications/ze_vio_frontend/: CMakeLists.txt  package.xml  setup.py
applications/ze_vio_frontend/src/: feature_initializer.cpp  feature_tracker.cpp  frontend_api.cpp  frontend_base.cpp  frontend_gflags.cpp  frontend_logging.cpp  frontend_vio.cpp  keyframe_selection.cpp  landmarks_reprojector.cpp  refinement.cpp  stereo_matcher.cpp  track_extractor.cpp
common/ze_cameras/: CMakeLists.txt  package.xml
common/ze_cameras/src/: camera.cpp  camera_impl.cpp  camera_rig.cpp  camera_utils.cpp  camera_yaml_serialization.cpp
common/ze_cameras/test/: test_camera_impl.cpp  test_camera_rig.cpp  test_camera_utils.cpp
common/ze_cmake/: CMakeLists.txt  package.xml
common/ze_cmake/cmake/: ze_cmake-extras.cmake.develspace.in  ze_cmake-extras.cmake.installspace.in
common/ze_cmake/cmake/macros/: ze_macros_common.cmake  ze_macros_cuda.cmake
common/ze_cmake/cmake/modules/: ze_brisk.cmake  ze_gtsam.cmake  ze_options.cmake  ze_setup.cmake
common/ze_common/: CMakeLists.txt  package.xml
common/ze_common/src/: csv_trajectory.cpp  matrix.cpp  random.cpp  signal_handler.cpp  test_thread_blocking.cpp  test_utils.cpp  thread_pool.cpp
common/ze_common/test/: test_benchmark.cpp  test_buffer.cpp  test_combinatorics.cpp  test_csv_trajectory.cpp  test_manifold.cpp  test_matrix.cpp  test_numerical_derivative.cpp  test_random.cpp  test_random_matrix.cpp  test_ring_view.cpp  test_ringbuffer.cpp  test_running_statistics.cpp  test_statistics.cpp  test_stl_utils.cpp  test_string_utils.cpp  test_test_utils.cpp  test_thread_pool.cpp  test_thread_safe_fifo.cpp  test_timer.cpp  test_transformation.cpp  test_versioned_slot_handle.cpp
common/ze_data_provider/: CMakeLists.txt  package.xml
common/ze_data_provider/src/: camera_imu_synchronizer.cpp  camera_imu_synchronizer_base.cpp  data_provider_base.cpp  data_provider_csv.cpp  data_provider_factory.cpp  data_provider_rosbag.cpp  data_provider_rostopic.cpp
common/ze_data_provider/test/: test_camera_imu_synchronizer.cpp  test_data_provider.cpp
common/ze_geometry/: CMakeLists.txt  package.xml
common/ze_geometry/doc/: bibliography_lines.bib  line_parametrization.tex
common/ze_geometry/src/: align_points.cpp  align_poses.cpp  clam.cpp  line.cpp  pose_optimizer.cpp  ransac_relative_pose.cpp  triangulation.cpp
common/ze_geometry/test/: test_align_points.cpp  test_align_poses.cpp  test_clam.cpp  test_line.cpp  test_lsq_state.cpp  test_pose_optimizer.cpp  test_ransac_relative_pose.cpp  test_robust_cost.cpp  test_triangulation.cpp
common/ze_imu/: CMakeLists.txt  package.xml  setup.py
common/ze_imu/py/ze_imu/: __init__.py  imu_integration.py  imu_trajectory_simulation.py
common/ze_imu/src/: accelerometer_model.cpp  gyroscope_model.cpp  imu_buffer.cpp  imu_intrinsic_model.cpp  imu_model.cpp  imu_noise_model.cpp  imu_rig.cpp  imu_yaml_serialization.cpp
common/ze_imu/test/: test_accelerometer_model.cpp  test_gyroscope_model.cpp  test_imu_buffer.cpp  test_imu_model.cpp  test_imu_types.cpp  test_intrinsic_model.cpp  test_noise_model.cpp  test_yaml_serialization.cpp
common/ze_ros/: CMakeLists.txt  package.xml
common/ze_ros/src/: pose_msg_bridge.cpp  rosbag_image_query.cpp  tf_bridge.cpp
common/ze_ros/test/: test_rosbag_image_query.cpp
common/ze_ros_msg/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/ze_ros_msg/msg/: bmx055_acc.msg  bmx055_gyr.msg  clock_sync.msg  clock_transformation.msg  ping_result.msg
common/ze_vio_common/: CMakeLists.txt  package.xml
common/ze_vio_common/src/: frame.cpp  imu_integrator.cpp  landmark_table.cpp  landmark_triangulation.cpp  landmark_types.cpp  landmark_utils.cpp  nframe.cpp  nframe_table.cpp  nframe_utils.cpp  vio_visualizer.cpp
common/ze_vio_common/test/: test_landmark_table.cpp  test_nframe_table.cpp
imp/imp_bridge_opencv/: CMakeLists.txt  package.xml
imp/imp_bridge_opencv/cmake/: ze_imp_bridge_opencv-extras.cmake.in
imp/imp_bridge_opencv/src/: cv_bridge.cpp  cv_connector_pixel_types.cpp  image_cv.cpp
imp/imp_bridge_opencv/test/: test_load_image.cpp
imp/imp_bridge_ros/: CMakeLists.txt  package.xml
imp/imp_bridge_ros/src/: ros_bridge.cpp
imp/imp_core/: CMakeLists.txt  package.xml
imp/imp_core/src/: image_raw.cpp  linearmemory.cpp
imp/imp_core/test/: linearmemory_test.cpp  roi_test.cpp  single_shot_timer_test.cpp  size_test.cpp  test_copy.cpp  test_image.cpp  vec_test.cpp
imp/imp_correspondence/: CMakeLists.txt  package.xml
imp/imp_correspondence/src/: epipolar_matcher.cpp  epipolar_sampling.cpp  klt.cpp  klt_neon.cpp  sparse_stereo.cpp
imp/imp_correspondence/test/: test_epipolar_matcher.cpp  test_epipolar_sampling.cpp  test_klt.cpp  test_patch_utils.cpp  test_sparse_stereo.cpp
imp/imp_feature_matching/: CMakeLists.txt  package.xml
imp/imp_feature_matching/src/: brute_force_matcher.cpp  matching_types.cpp  matching_viz.cpp
imp/imp_feature_matching/test/: test_brute_force_matcher.cpp  test_hamming.cpp  test_matching_viz.cpp
(+206 files in other folders)
