<?xml version="1.0"?>
<package format="2">
  <name>ze_ceres_backend</name>
  <version>0.1.4</version>
  <description>
    ze_ceres_backend
  </description>
  <maintainer email="rebecq@ifi.uzh.ch">Henri Rebecq</maintainer>
  <license>tbd</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>ceres_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>

  <depend>ze_cmake</depend>
  <depend>ze_common</depend>
  <depend>ze_vio_common</depend>

</package>
