<?xml version="1.0"?>
<package format="2">
  <name>ze_vio_frontend</name>
  <version>0.1.4</version>
  <description>
    ze_vio_frontend
  </description>
  <maintainer email="rebecq@ifi.uzh.ch">Henri Rebecq</maintainer>
  <license>tbd</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>imp_bridge_opencv</depend>
  <depend>imp_core</depend>
  <depend>imp_correspondence</depend>
  <depend>imp_features</depend>
  <depend>imp_imgproc</depend>
  <depend>minkindr</depend>
  <depend>ze_cmake</depend>
  <depend>ze_cameras</depend>
  <depend>ze_common</depend>
  <depend>ze_data_provider</depend>
  <depend>ze_geometry</depend>
  <depend>ze_vio_common</depend>
  <depend>ze_visualization</depend>

  <test_depend>gtest</test_depend>
</package>
