<?xml version="1.0"?>
<package format="2">
  <name>ze_data_provider</name>
  <version>0.1.4</version>
  <description>
    Read data from csv, bagfiles etc.
  </description>
  <maintainer email="rebecq@ifi.uzh.ch">Henri Rebecq</maintainer>
  <license>tbd</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>imp_core</depend>
  <depend>imp_bridge_opencv</depend>
  <depend>imp_bridge_ros</depend>
  <depend>minkindr</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>ze_cmake</depend>
  <depend>ze_common</depend>
  <depend>ze_imu</depend>
  <depend>ze_ros_msg</depend>
  <depend>dvs_msgs</depend>
  <depend>ze_vio_common</depend>

  <test_depend>gtest</test_depend>
</package>
