<?xml version="1.0"?>
<package format="2">
  <name>ze_geometry</name>
  <version>0.1.4</version>
  <description>The ze_geometry package</description>

  <maintainer email="rebecq@ifi.uzh.ch">Henri Rebecq</maintainer>
  <license>tbd</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>minkindr</depend>
  <depend>opengv</depend>
  <depend>ze_cmake</depend>
  <depend>ze_common</depend>
  <depend>ze_cameras</depend>

  <test_depend>gtest</test_depend>
</package>
