<?xml version="1.0"?>
<package format="2">
  <name>ze_ros</name>
  <version>0.1.4</version>
  <description>
    ROS utilities.
  </description>
  <maintainer email="rebecq@ifi.uzh.ch">Henri Rebecq</maintainer>
  <license>tbd</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>glog_catkin</depend>
  <depend>imp_bridge_ros</depend>
  <depend>imp_core</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>ze_cmake</depend>
  <depend>ze_common</depend>

</package>
